# File2QR

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  portFile.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: TESTING.md  spec.md
src/: app.rs  lib.rs  main.rs
src/decode/: fragment.rs  mod.rs  tests.rs
src/encode/: fragment.rs  mod.rs  tests.rs
src/ui/: decode_panel.rs  decode_panel_tests.rs  encode_panel.rs  encode_panel_tests.rs  mod.rs  qr_window.rs  qr_window_tests.rs
tests/: integration_tests.rs
