[package]
name = "file2qr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "File2QR"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
egui_extras = "0.33"

# QRコード生成（qrcodegenでByteモード強制）
qrcodegen = "1.8"
image = "0.25"

# Base64
base64 = "0.22"

# xz圧縮
xz2 = "0.1"

# ハッシュ
sha2 = "0.10"
hex = "0.4"

# URLエンコード
percent-encoding = "2.3"

# ファイルダイアログ
rfd = "0.17"

# ログ
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
