[package]
name = "file2qr"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "File2QR"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", default-features = false, features = [
    "tiny-skia",
    "image",
    "tokio",
] }

qrcodegen = "1.8"
image = "0.25"
base64 = "0.22"
xz2 = "0.1"
sha2 = "0.11"
hex = "0.4"
percent-encoding = "2.3"
rfd = "0.17"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
